Add stub for handling intent android.settings.DREAM_SETTINGS
Test: Verified toast message by sending intent
Bug: 329301525
(cherry picked from https://googleplex-android-review.googlesource.com/q/commit:7ed1d0002ab9ab5fb9dee00ae5bf187fe8de7246)
Merged-In: I4bdd9a1acca64886c86f3df1b27495b2a35a6ea5
Change-Id: I4bdd9a1acca64886c86f3df1b27495b2a35a6ea5
DreamServices and DocumentsUI

--- a/FrameworkPackageStubs/AndroidManifest.xml
+++ b/FrameworkPackageStubs/AndroidManifest.xml
@@ -240,6 +240,17 @@
             </intent-filter>
         </activity>
 
+        <!-- Dream settings stub -->
+        <activity android:name=".Stubs$DreamSettingsStub"
+            android:label="@string/stub_name"
+            android:excludeFromRecents="true"
+            android:exported="true">
+            <intent-filter android:priority="-1">
+                <action android:name="android.settings.DREAM_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <!-- Contacts package stubs -->
         <activity
             android:name=".Stubs$ContactsStub"
