Add choice dialog before starting bug reporting
Show a choice dialog to enable users choose the next action before
starting a default action.

If there is no user response in 5 seconds, it will automatically start a
default first action. The action is one of AUDIO_FIRST and AUDIO_LATER.

It can be triggered by
com.android.car.bugreport.action.START_BUG_REPORT action.

Bug: 301369131
Test: Run `adb shell am start -a com.android.car.bugreport.action.START_BUG_REPORT`
Change-Id: I063dc18157d870526493aa073382f10667ffafe4
(cherry picked from commit 40159131a5d1e1e21531f8f01aa4bf4cd5809b78)

--- a/tests/BugReportApp/AndroidManifest.xml
+++ b/tests/BugReportApp/AndroidManifest.xml
@@ -56,6 +56,19 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ChoiceDialogActivity"
+            android:theme="@style/DialogWithNullBackground"
+            android:exported="true"
+            android:launchMode="singleInstance"
+            android:excludeFromRecents="true">
+            <meta-data android:name="distractionOptimized" android:value="true"/>
+            <intent-filter>
+                <action android:name="com.android.car.bugreport.action.START_BUG_REPORT" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+            </intent-filter>
+        </activity>
+
         <!--
           singleInstance allows starting bugreport dialog when BugReportInfoActivity is open.
         -->
