Add a responsive cluster activity to be used with fancy WM references
Bug: N/A
Test: m
Test: Tried to send insets to this activity from systemui using a custom
      windowing architecture
Change-Id: Idd980e4da4079939ca3d51d97899783be59619b0

--- a/tests/EmbeddedKitchenSinkApp/AndroidManifest.xml
+++ b/tests/EmbeddedKitchenSinkApp/AndroidManifest.xml
@@ -455,6 +455,18 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".cluster.ResponsiveClusterActivity"
+            android:launchMode="singleInstance"
+            android:theme="@style/KSDayNightTheme"
+            android:documentLaunchMode="always"
+            android:exported="true"
+            android:label="ResponsiveClusterActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+            </intent-filter>
+        </activity>
+
         <service android:name=".bluetooth.InCallServiceImpl"
                  android:exported="false"
                  android:permission="android.permission.BIND_INCALL_SERVICE">
