--- a/packages/CarShell/AndroidManifest.xml
+++ b/packages/CarShell/AndroidManifest.xml
@@ -157,4 +157,6 @@
     <uses-permission android:name="android.car.permission.MANAGE_OCCUPANT_CONNECTION" />
     <!-- Permissions required for CarRemoteDeviceManagerPermissionTest -->
     <uses-permission android:name="android.car.permission.MANAGE_REMOTE_DEVICE" />
+    <!-- permissions required for CarProjectionManagerTest -->
+    <uses-permission android:name="android.car.permission.CAR_PROJECTION" />
 </manifest>
