--- a/tests/CarBuiltinLibUnitTest/AndroidManifest.xml
+++ b/tests/CarBuiltinLibUnitTest/AndroidManifest.xml
@@ -16,8 +16,10 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
+        android:sharedUserId="com.google.android.car.uid.kitchensink"
         package="android.car.builtin.test">
-    <application android:debuggable="true">
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE"/>
+    <application android:debuggable="true" android:testOnly="true">
         <uses-library android:name="android.test.runner" />
     </application>
     <instrumentation android:name="androidx.test.runner.AndroidJUnitRunner"
