Add a user declaration for cardumpstatez
`user root` like the default value it was getting.

Found in presubmit failure in ag/28056551

The original solution of `user shell` was reverted in aosp/3218371
because it caused CarBugreportManagerTest to fail.

Test: none
Bug: none
Change-Id: Iddda62fa1c1ef69dae7196f12dd5c4e35597e700

--- a/cpp/bugreport/carbugreportd.rc
+++ b/cpp/bugreport/carbugreportd.rc
@@ -13,5 +13,6 @@ service carbugreportd /system/bin/carbugreportd
 service cardumpstatez /system/bin/dumpstate -S -d -z
     socket dumpstate stream 0660 shell log
     class main
+    user root
     disabled
     oneshot
