--- a/tests/android_car_api_test/AndroidManifest.xml
+++ b/tests/android_car_api_test/AndroidManifest.xml
@@ -229,6 +229,7 @@
         <activity android:name=".TestDrivingSafetyRegionNoMetadataActivity"
                   android:exported="true">
         </activity>
+        <activity android:name=".CarDisplayInputLockTest$TestActivity" />
         <service android:name=".CarProjectionManagerTest$TestService"
              android:exported="true"/>
         <service android:name="com.android.car.internal.test.LargeParcelableTestService"
