Car service to change swap spaces before hibernate
- If property of ro.sys.hibernate_enabled is enabled, suspend will
  change the swap space based on the fstab property
- Don't allow any domain other than carservice and init to change
  sys.hibernate property.
- Don't allow anything other than init to change the config hibernation
  properties.

Flag: android.car.feature.change_swaps_during_suspend_to_disk
Bug: 339688542
Test: Manual
Change-Id: Ia46452e8f57abd08b4b91b0bd1e9cd435b32cd0c

--- a/car_product/init/init.car.rc
+++ b/car_product/init/init.car.rc
@@ -2,3 +2,11 @@
 on post-fs-data
     mkdir /data/system/car 0700 system system
     mkdir /data/system/car/watchdog 0700 system system
+
+# Swapon hibernation block device before suspend to disk
+on property:sys.hibernate=1 && property:ro.sys.hibernate_enabled=1 && property:ro.sys.swap_storage_device=*
+    swapon_all /vendor/etc/fstab.hibernationswap
+
+# Swapoff hibernation block device after resume from hibernation
+on property:sys.hibernate=0 && property:ro.sys.hibernate_enabled=1 && property:ro.sys.swap_storage_device=*
+    swapoff ${ro.sys.swap_storage_device}
