Update entry point for Fingerprint enrollment
Bug: 364794493
Test: atest CarDeveloperOptionsIntentTest
Flag: EXEMPT can't apply flag for manifest change
Change-Id: I00538a80a014064f0700da41ce78430157418040

--- a/packages/CarDeveloperOptions/AndroidManifest.xml
+++ b/packages/CarDeveloperOptions/AndroidManifest.xml
@@ -1309,7 +1309,7 @@
             tools:replace="android:exported"/>
 
         <activity
-            android:name="com.android.settings.biometrics.fingerprint.FingerprintEnrollIntroduction"
+            android:name="com.android.settings.biometrics.fingerprint.FingerprintEnroll"
             android:enabled="false"
             android:exported="false"
             tools:node="merge"
@@ -1333,7 +1333,7 @@
             tools:replace="android:exported"/>
 
         <activity
-            android:name="com.android.settings.biometrics.fingerprint.SetupFingerprintEnrollIntroduction"
+            android:name="com.android.settings.biometrics.fingerprint.FingerprintEnroll$SetupActivity"
             android:enabled="false"
             android:exported="false"
             tools:node="merge"
