--- a/packages/CarDeveloperOptions/AndroidManifest.xml
+++ b/packages/CarDeveloperOptions/AndroidManifest.xml
@@ -325,6 +325,15 @@
         </activity>
 
         <activity
+            android:name="com.android.settings.Settings$CombinedBiometricSettingsActivity"
+            android:enabled="false"
+            android:exported="false"
+            tools:node="merge"
+            tools:replace="android:exported">
+            <intent-filter tools:node="removeAll"/>
+        </activity>
+
+        <activity
             android:name="com.android.settings.bluetooth.DevicePickerActivity"
             android:enabled="false"
             android:exported="false"
