Remove ShortcutsUpdateReceiver from Car Settings manifest
Fixes: 368249594
Test: CarDeveloperOptionsUnitTests
Flag: EXEMPT unflaggable
Change-Id: I7f7a278a740020e93fcd2d6e7fbc500ba0e726d3

--- a/packages/CarDeveloperOptions/AndroidManifest.xml
+++ b/packages/CarDeveloperOptions/AndroidManifest.xml
@@ -3347,6 +3347,14 @@
             <intent-filter tools:node="removeAll"/>
         </receiver>
 
+        <receiver android:name="com.android.settings.shortcut.ShortcutsUpdateReceiver"
+            android:exported="false"
+            android:enabled="false"
+            tools:node="merge"
+            tools:replace="android:exported">
+            <intent-filter tools:node="removeAll"/>
+        </receiver>
+
         <service
             android:name="com.android.settings.wifi.tether.TetherService"
             android:enabled="false"
