Remove Settings Service from Manifest
Bug: 373339105
Test: unit test
Flag: EXEMPT <N/A>
Change-Id: I1e038c0c3b391c1dad6564f57f85884f4efc8037

--- a/packages/CarDeveloperOptions/AndroidManifest.xml
+++ b/packages/CarDeveloperOptions/AndroidManifest.xml
@@ -3463,5 +3463,14 @@
             <intent-filter tools:node="removeAll"/>
         </service>
 
+        <service
+          android:name="com.android.settings.SettingsService"
+          android:enabled="false"
+          android:exported="false"
+          tools:node="merge"
+          tools:replace="android:exported,android:enabled">
+          <intent-filter tools:node="removeAll" />
+        </service>
+
     </application>
 </manifest>
