--- a/tests/ProcFsInspector/AndroidManifest.xml
+++ b/tests/ProcFsInspector/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 The Android Open Source Project
+<!-- Copyright (C) 2024 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,16 +15,12 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
-        package="com.android.car.carservice_unittest">
-    <uses-permission android:name="android.car.permission.CAR_POWER" />
-    <uses-permission android:name="android.car.permission.USE_REMOTE_ACCESS" />
-    <uses-permission android:name="android.car.permission.CONTROL_REMOTE_ACCESS" />
+        package="com.android.car.procfsinspector">
     <instrumentation android:name="androidx.test.runner.AndroidJUnitRunner"
-            android:targetPackage="com.android.car.carservice_unittest"
-            android:label="Unit Tests for Car APIs"/>
-    <application android:label="@string/app_title"
-        android:debuggable="true" android:testOnly="true">
+            android:targetPackage="com.android.car.procfsinspector"
+            android:label="Unit Tests for ProcFsInspector"/>
+    <application
+        android:debuggable="true">
         <uses-library android:name="android.test.runner" />
     </application>
 </manifest>
