--- a/service/AndroidManifest.xml
+++ b/service/AndroidManifest.xml
@@ -434,6 +434,15 @@
          android:label="@string/car_permission_label_car_exterior_lights"
          android:description="@string/car_permission_desc_car_exterior_lights"/>
 
+    <!-- Allows a 3P application to read the vehicle exterior lights state.
+         <p>Protection level: dangerous
+    -->
+    <permission android:name="android.car.permission.READ_CAR_EXTERIOR_LIGHTS"
+        android:permissionGroup="android.car.permission-group.CAR_MONITORING"
+        android:protectionLevel="dangerous"
+        android:label="@string/car_permission_label_read_car_exterior_lights"
+        android:description="@string/car_permission_desc_read_car_exterior_lights"/>
+
     <!-- Allows an application to control the vehicle exterior lights.
          <p>Protection level: signature|privileged
     -->
