Added VEHICLE_HORN_ENGAGED to API
Bug: 374760333
Test: atest CarPropertyManagerTest VehiclePropertyIdsTest

Flag: android.car.feature.android_b_vehicle_properties
Change-Id: I53396bfecf7d781f60debd124f3cb47e343d7cbc

--- a/tests/EmbeddedKitchenSinkApp/AndroidManifest.xml
+++ b/tests/EmbeddedKitchenSinkApp/AndroidManifest.xml
@@ -37,6 +37,8 @@
     <uses-permission android:name="android.car.permission.CAR_INSTRUMENT_CLUSTER_CONTROL"/>
     <uses-permission android:name="android.car.permission.CAR_MILEAGE"/>
     <uses-permission android:name="android.car.permission.CAR_MILEAGE_3P"/>
+    <uses-permission android:name="android.car.permission.READ_CAR_HORN"/>
+    <uses-permission android:name="android.car.permission.CONTROL_CAR_HORN"/>
     <uses-permission android:name="android.car.permission.CAR_MOCK_VEHICLE_HAL"/>
     <uses-permission android:name="android.car.permission.CAR_NAVIGATION_MANAGER"/>
     <!-- use for CarServiceTest -->
