--- a/packages/CarShell/AndroidManifest.xml
+++ b/packages/CarShell/AndroidManifest.xml
@@ -81,6 +81,8 @@
     <uses-permission android:name="android.car.permission.CAR_ENGINE_DETAILED_3P" />
     <uses-permission android:name="android.car.permission.CAR_MILEAGE" />
     <uses-permission android:name="android.car.permission.CAR_MILEAGE_3P" />
+    <uses-permission android:name="android.car.permission.READ_CAR_HORN" />
+    <uses-permission android:name="android.car.permission.CONTROL_CAR_HORN" />
     <uses-permission android:name="android.car.permission.CAR_TIRES" />
     <uses-permission android:name="android.car.permission.CAR_EXTERIOR_LIGHTS" />
     <uses-permission android:name="android.car.permission.READ_CAR_EXTERIOR_LIGHTS" />
