--- a/service/AndroidManifest.xml
+++ b/service/AndroidManifest.xml
@@ -235,6 +235,23 @@
          android:label="@string/car_permission_label_mileage_3p"
          android:description="@string/car_permission_desc_mileage_3p"/>
 
+    <!-- Allows an application to read vehicle horn.
+         <p>Protection level: dangerous
+    -->
+    <permission android:name="android.car.permission.READ_CAR_HORN"
+        android:permissionGroup="android.car.permission-group.CAR_MONITORING"
+        android:protectionLevel="dangerous"
+        android:label="@string/car_permission_label_read_car_horn"
+        android:description="@string/car_permission_desc_read_car_horn"/>
+
+    <!-- Allows an application to control vehicle horn.
+         <p>Protection level: signature|privileged
+    -->
+    <permission android:name="android.car.permission.CONTROL_CAR_HORN"
+        android:protectionLevel="signature|privileged"
+        android:label="@string/car_permission_label_control_car_horn"
+        android:description="@string/car_permission_desc_control_car_horn"/>
+
     <!-- Allows an application to read the vehicle tire pressure information.
          <p>Protection level: signature|privileged
     -->
