--- a/packages/CarShell/AndroidManifest.xml
+++ b/packages/CarShell/AndroidManifest.xml
@@ -83,6 +83,7 @@
     <uses-permission android:name="android.car.permission.CAR_MILEAGE_3P" />
     <uses-permission android:name="android.car.permission.READ_CAR_HORN" />
     <uses-permission android:name="android.car.permission.CONTROL_CAR_HORN" />
+    <uses-permission android:name="android.car.permission.READ_CAR_PEDALS" />
     <uses-permission android:name="android.car.permission.CAR_TIRES" />
     <uses-permission android:name="android.car.permission.CAR_EXTERIOR_LIGHTS" />
     <uses-permission android:name="android.car.permission.READ_CAR_EXTERIOR_LIGHTS" />
