--- a/service/AndroidManifest.xml
+++ b/service/AndroidManifest.xml
@@ -252,6 +252,15 @@
         android:label="@string/car_permission_label_control_car_horn"
         android:description="@string/car_permission_desc_control_car_horn"/>
 
+    <!-- Allows an application to read car pedal information.
+         <p>Protection level: dangerous
+    -->
+    <permission android:name="android.car.permission.READ_CAR_PEDALS"
+        android:permissionGroup="android.car.permission-group.CAR_MONITORING"
+        android:protectionLevel="dangerous"
+        android:label="@string/car_permission_label_read_car_pedals"
+        android:description="@string/car_permission_desc_read_car_pedals"/>
+
     <!-- Allows an application to read the vehicle tire pressure information.
          <p>Protection level: signature|privileged
     -->
