--- a/packages/CarShell/AndroidManifest.xml
+++ b/packages/CarShell/AndroidManifest.xml
@@ -84,6 +84,7 @@
     <uses-permission android:name="android.car.permission.READ_CAR_HORN" />
     <uses-permission android:name="android.car.permission.CONTROL_CAR_HORN" />
     <uses-permission android:name="android.car.permission.READ_CAR_PEDALS" />
+    <uses-permission android:name="android.car.permission.READ_BRAKE_INFO" />
     <uses-permission android:name="android.car.permission.CAR_TIRES" />
     <uses-permission android:name="android.car.permission.CAR_EXTERIOR_LIGHTS" />
     <uses-permission android:name="android.car.permission.READ_CAR_EXTERIOR_LIGHTS" />
