--- a/tests/EmbeddedKitchenSinkApp/AndroidManifest.xml
+++ b/tests/EmbeddedKitchenSinkApp/AndroidManifest.xml
@@ -40,6 +40,7 @@
     <uses-permission android:name="android.car.permission.READ_CAR_HORN"/>
     <uses-permission android:name="android.car.permission.CONTROL_CAR_HORN"/>
     <uses-permission android:name="android.car.permission.READ_CAR_PEDALS"/>
+    <uses-permission android:name="android.car.permission.READ_BRAKE_INFO" />
     <uses-permission android:name="android.car.permission.CAR_MOCK_VEHICLE_HAL"/>
     <uses-permission android:name="android.car.permission.CAR_NAVIGATION_MANAGER"/>
     <!-- use for CarServiceTest -->
