Remove activity from car dev options
Remove activity that was added to phone settings.

Bug: 376641612
Test: atest com.android.car.developeroptions.CarDeveloperOptionsIntentTest
Flag: EXEMPT test_only
Change-Id: I97579fbc2bd338f37d83ee45bf9677908c6052bc

--- a/packages/CarDeveloperOptions/AndroidManifest.xml
+++ b/packages/CarDeveloperOptions/AndroidManifest.xml
@@ -1785,7 +1785,7 @@
         </activity>
 
         <activity
-            android:name="com.android.settings.PowerUsageAdvancedActivity"
+            android:name="com.android.settings.Settings$PowerUsageAdvancedActivity"
             android:enabled="false"
             android:exported="false"
             tools:node="merge"
