--- a/packages/CarDeveloperOptions/AndroidManifest.xml
+++ b/packages/CarDeveloperOptions/AndroidManifest.xml
@@ -2981,6 +2981,16 @@
        </activity>
 
         <activity
+            android:name="com.android.settings.Settings$ContactsStorageSettingsActivity"
+            android:enabled="false"
+            android:exported="false"
+            android:featureFlag="android.provider.new_default_account_api_enabled"
+            tools:node="merge"
+            tools:replace="android:exported, android:enabled">
+            <intent-filter tools:node="removeAll"/>
+        </activity>
+
+        <activity
             android:name="com.android.settings.spa.search.SpaSearchLandingActivity"
             android:enabled="false"
             android:exported="false"
