Fix failing CarDeveloperOptionsUnitTests
Flag: EXEMPT bugfix
Bug: 379618293
Test: atest CarDeveloperOptionsUnitTests
Change-Id: Idbad5a748d1cfae5209e99e82df9d596d8ad81fd

--- a/packages/CarDeveloperOptions/AndroidManifest.xml
+++ b/packages/CarDeveloperOptions/AndroidManifest.xml
@@ -2999,6 +2999,15 @@
             <intent-filter tools:node="removeAll"/>
         </activity>
 
+        <activity
+            android:name="com.android.settings.Settings$ChangeNfcTagAppsActivity"
+            android:enabled="false"
+            android:exported="false"
+            tools:node="merge"
+            tools:replace="android:exported, android:enabled">
+            <intent-filter tools:node="removeAll"/>
+        </activity>
+
         <activity-alias
             android:name="com.android.settings.ConfirmDeviceCredentialActivity"
             android:enabled="false"
