Support toggle on control bar
- ControlBarActivity now receives broadcast from system UI to know if
  the application panel is open and the top task in application panel
- ControlBarActivity requests sytemUI to close the application panel
  when
  - Top task is media or dialer
  - application panel is open
  - receives media or incall intent

Flag: EXEMPT refactor
Bug: 379773628
Test: manual
Change-Id: Ifb065a65000a487c7582b2a842c52ea07a7b772c

--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/AndroidManifest.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/AndroidManifest.xml
@@ -105,6 +105,7 @@
             android:resumeWhilePausing="true"
             android:exported="true"
             android:windowSoftInputMode="adjustPan"
+            android:theme="@style/ControlBarActivityTheme"
             android:excludeFromRecents="true">
             <meta-data android:name="distractionOptimized" android:value="true"/>
             <intent-filter>
