--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/AndroidManifest.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/AndroidManifest.xml
@@ -63,8 +63,8 @@
             <meta-data android:name="distractionOptimized" android:value="true"/>
         </activity>
 
-        <activity android:name=".homeactivities.CarUiPortraitHomeScreen"
-                  android:label="CarUiPortraitHomeScreen"
+        <activity android:name=".homeactivities.BlankActivity"
+                  android:label="BlankActivity"
                   android:configChanges="density|fontScale|keyboard|keyboardHidden|layoutDirection|locale|mcc|mnc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|touchscreen|uiMode"
                   android:launchMode="singleTask"
                   android:clearTaskOnLaunch="true"
