Use notification for radio alert in kitchen sink
Bug: 361348719
Flag: android.hardware.radio.hd_radio_emergency_alert_system
Test: open FM tuner in radio KS and run command "adb shell dumpsys android.hardware.broadcastradio.IBroadcastRadio/amfm --simulateAlert"
Change-Id: I3044fcf07794de08ad010a4e11b9d363fb264980

--- a/tests/EmbeddedKitchenSinkApp/AndroidManifest.xml
+++ b/tests/EmbeddedKitchenSinkApp/AndroidManifest.xml
@@ -253,6 +253,7 @@
 
     <!-- Use for RadioTestFragment -->
     <uses-permission android:name="android.permission.ACCESS_BROADCAST_RADIO"/>
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
 
     <!-- Allow backup is set to false for KitchenSinkApp to avoid infinite loop during backup -->
     <application
@@ -498,5 +499,13 @@
                 <action android:name="android.car.remoteaccess.RemoteTaskClientService" />
             </intent-filter>
         </service>
+        <receiver
+            android:name=".radio.AlertNotificationReceiver"
+            android:exported="false">
+        </receiver>
+        <receiver
+            android:name=".radio.AlertSnoozeReceiver"
+            android:exported="false">
+        </receiver>
     </application>
 </manifest>
