--- a/packages/CarShell/AndroidManifest.xml
+++ b/packages/CarShell/AndroidManifest.xml
@@ -69,6 +69,7 @@
     <!-- Permission required for CTS test - CarPowerManagerTest-->
     <uses-permission android:name="android.car.permission.CONTROL_CAR_POWER_POLICY" />
     <!-- Permissions required for CTS test - CarPropertyManagerTest -->
+    <uses-permission android:name="android.car.permission.READ_CAR_STEERING_3P" />
     <uses-permission android:name="android.car.permission.READ_DRIVER_MONITORING_SETTINGS"/>
     <uses-permission android:name="android.car.permission.CONTROL_DRIVER_MONITORING_SETTINGS"/>
     <uses-permission android:name="android.car.permission.READ_DRIVER_MONITORING_STATES"/>
