--- a/service/AndroidManifest.xml
+++ b/service/AndroidManifest.xml
@@ -233,6 +233,15 @@
          android:label="@string/car_permission_label_car_steering"
          android:description="@string/car_permission_desc_car_steering"/>
 
+    <!-- Allows an application to read the vehicle steering angle information.
+    <p>Protection level: dangerous
+    -->
+    <permission android:name="android.car.permission.READ_CAR_STEERING_3P"
+         android:permissionGroup="android.permission-group.LOCATION"
+         android:protectionLevel="dangerous"
+         android:label="@string/car_permission_label_read_car_steering_3p"
+         android:description="@string/car_permission_desc_read_car_steering_3p"/>
+
     <!-- Allows an application to read the display units for distance, fuel, tire pressure,
          EV battery and fuel consumption.
          <p>Protection level: normal
