Add new PERMISSION_MILEAGE_3P for PERF_ODOMETER.
Flag: android.car.feature.vehicle_property_25q2_3p_permissions
Bug: 357910697
Test: atest CarPropertyManagerTest
Change-Id: I70bf43dfeddc785280d57e80c69ed89c3adeaf06

--- a/service/AndroidManifest.xml
+++ b/service/AndroidManifest.xml
@@ -217,6 +217,15 @@
          android:label="@string/car_permission_label_mileage"
          android:description="@string/car_permission_desc_mileage"/>
 
+    <!-- Allows an application to read the vehicle mileage information.
+         <p>Protection level: dangerous
+    -->
+    <permission android:name="android.car.permission.CAR_MILEAGE_3P"
+         android:permissionGroup="android.permission-group.LOCATION"
+         android:protectionLevel="dangerous"
+         android:label="@string/car_permission_label_mileage_3p"
+         android:description="@string/car_permission_desc_mileage_3p"/>
+
     <!-- Allows an application to read the vehicle tire pressure information.
          <p>Protection level: signature|privileged
     -->
