--- a/tests/EmbeddedKitchenSinkApp/AndroidManifest.xml
+++ b/tests/EmbeddedKitchenSinkApp/AndroidManifest.xml
@@ -35,6 +35,7 @@
     <uses-permission android:name="android.car.permission.CAR_PROJECTION"/>
     <uses-permission android:name="android.car.permission.CAR_INSTRUMENT_CLUSTER_CONTROL"/>
     <uses-permission android:name="android.car.permission.CAR_MILEAGE"/>
+    <uses-permission android:name="android.car.permission.CAR_MILEAGE_3P"/>
     <uses-permission android:name="android.car.permission.CAR_MOCK_VEHICLE_HAL"/>
     <uses-permission android:name="android.car.permission.CAR_NAVIGATION_MANAGER"/>
     <!-- use for CarServiceTest -->
