Add PERMISSION_READ_CAR_SEATS for SEAT_OCCUPANCY.
Flag: android.car.feature.vehicle_property_25q2_3p_permissions
Bug: 357910697
Test: atest CarPropertyManagerTest
Change-Id: I37b301ed64cdce7a3e809fd8fd490488d0a8ef72

--- a/service/AndroidManifest.xml
+++ b/service/AndroidManifest.xml
@@ -143,6 +143,15 @@
          android:label="@string/car_permission_label_control_car_seats"
          android:description="@string/car_permission_desc_control_car_seats"/>
 
+    <!-- Allows an application to read the vehicle seats.
+         <p>Protection level: dangerous
+    -->
+    <permission android:name="android.car.permission.READ_CAR_SEATS"
+         android:permissionGroup="android.car.permission-group.CAR_MONITORING"
+         android:protectionLevel="dangerous"
+         android:label="@string/car_permission_label_read_car_seats"
+         android:description="@string/car_permission_desc_read_car_seats"/>
+
     <!-- Allows an application to read state of seat belts.
          <p>Protection level: signature|privileged
     -->
