--- a/tests/EmbeddedKitchenSinkApp/AndroidManifest.xml
+++ b/tests/EmbeddedKitchenSinkApp/AndroidManifest.xml
@@ -77,6 +77,7 @@
     <uses-permission android:name="android.car.permission.CONTROL_CAR_MIRRORS" />
     <uses-permission android:name="android.car.permission.CONTROL_GLOVE_BOX" />
     <uses-permission android:name="android.car.permission.CONTROL_CAR_SEATS" />
+    <uses-permission android:name="android.car.permission.READ_CAR_SEATS" />
     <uses-permission android:name="android.car.permission.READ_CAR_SEAT_BELTS" />
     <uses-permission android:name="android.car.permission.READ_IMPACT_SENSORS" />
     <uses-permission android:name="android.car.permission.READ_VALET_MODE" />
