--- a/packages/CarShell/AndroidManifest.xml
+++ b/packages/CarShell/AndroidManifest.xml
@@ -51,6 +51,7 @@
     <uses-permission android:name="android.car.permission.MODIFY_DAY_NIGHT_MODE" />
     <!-- Permission required for ATS tests - AtsDeviceInfo -->
     <uses-permission android:name="android.car.permission.CAR_TIRES" />
+    <uses-permission android:name="android.car.permission.CAR_TIRES_3P" />
     <!-- Permission required for ATS tests - AtsDeviceInfo -->
     <uses-permission android:name="android.car.permission.READ_CAR_STEERING" />
     <!-- Permissions required for ATS tests - CarEvsManagerTest -->
