--- a/service/AndroidManifest.xml
+++ b/service/AndroidManifest.xml
@@ -1195,6 +1195,15 @@
         android:label="@string/car_permission_label_read_windshield_wipers"
         android:description="@string/car_permission_desc_read_windshield_wipers"/>
 
+    <!-- Allows an application to read the vehicle's windshield wipers.
+        <p>Protection level: dangerous
+     -->
+     <permission android:name="android.car.permission.READ_WINDSHIELD_WIPERS_3P"
+        android:permissionGroup="android.car.permission-group.CAR_MONITORING"
+        android:protectionLevel="dangerous"
+        android:label="@string/car_permission_label_read_windshield_wipers_3p"
+        android:description="@string/car_permission_desc_read_windshield_wipers_3p"/>
+
      <!-- Allows an application to control the vehicle's windshield wipers.
          <p>Protection level: signature|privileged
       -->
