--- a/tests/EmbeddedKitchenSinkApp/AndroidManifest.xml
+++ b/tests/EmbeddedKitchenSinkApp/AndroidManifest.xml
@@ -93,6 +93,7 @@
     <uses-permission android:name="android.car.permission.CAR_IDENTIFICATION" />
     <uses-permission android:name="android.car.permission.ADJUST_RANGE_REMAINING" />
     <uses-permission android:name="android.car.permission.CAR_ENGINE_DETAILED" />
+    <uses-permission android:name="android.car.permission.CAR_ENGINE_DETAILED_3P" />
     <uses-permission android:name="android.car.permission.CONTROL_STEERING_WHEEL" />
     <uses-permission android:name="android.car.permission.READ_ADAS_SETTINGS" />
     <uses-permission android:name="android.car.permission.CONTROL_ADAS_SETTINGS" />
