Add PERMISSION_CAR_DRIVING_STATE_3P for VEHICLE_DRIVING_AUTOMATION_CURRENT_LEVEL.
Flag: android.car.feature.vehicle_property_25q2_3p_permissions
Bug: 357910697
Test: atest CarPropertyManagerTest
Change-Id: I9fe07b25722f60c83252ef8a41041b3fe36e1cdd

--- a/packages/CarShell/AndroidManifest.xml
+++ b/packages/CarShell/AndroidManifest.xml
@@ -33,6 +33,7 @@
     <uses-permission android:name="android.permission.ACCESS_VOICE_INTERACTION_SERVICE" />
     <!-- Permission required for ATS tests - AtsCarHostTestCases, AtsCarDeviceApp -->
     <uses-permission android:name="android.car.permission.CAR_DRIVING_STATE" />
+    <uses-permission android:name="android.car.permission.CAR_DRIVING_STATE_3P" />
     <!-- Permission required for 'adb shell cmd location is-automotive-gnss-suspended' -->
     <uses-permission android:name="android.permission.CONTROL_AUTOMOTIVE_GNSS" />
     <!-- Permission required for ATS tests - AtsCarTests#CarPropertyManagerTest-->
