Fix CarDeveloperOptions test
Remove new activity inherited from phone settings.

Bug: 382032104
Test: atest CarDeveloperOptionsIntentTest
Flag: EXEMPT test_only
Change-Id: I550c9c417cf1c9dcdeacfc2333f8ea08dfa99951

--- a/packages/CarDeveloperOptions/AndroidManifest.xml
+++ b/packages/CarDeveloperOptions/AndroidManifest.xml
@@ -361,6 +361,15 @@
         </activity>
 
         <activity
+            android:name="com.android.settings.network.SimOnboardingActivity"
+            android:enabled="false"
+            android:exported="false"
+            tools:node="merge"
+            tools:replace="android:exported">
+            <intent-filter tools:node="removeAll"/>
+        </activity>
+
+        <activity
             android:name="com.android.settings.Settings$TetherSettingsActivity"
             android:enabled="false"
             android:exported="false"
