Remove PreferenceService from Car Manifest
Bug: 382590599
Change-Id: Ieaf0e5182570877abe9af5279423e3ccd7ca61e0
Test: unit test
Flag: EXEMPT <N/A>

--- a/packages/CarDeveloperOptions/AndroidManifest.xml
+++ b/packages/CarDeveloperOptions/AndroidManifest.xml
@@ -3537,5 +3537,15 @@
           <intent-filter tools:node="removeAll" />
         </service>
 
+        <service
+          android:name="com.android.settings.service.PreferenceService"
+          android:enabled="false"
+          android:exported="false"
+          android:featureFlag="com.android.settingslib.flags.settings_catalyst"
+          tools:node="merge"
+          tools:replace="android:exported,android:enabled,android:featureFlag">
+          <intent-filter tools:node="removeAll" />
+        </service>
+
     </application>
 </manifest>
