Fix toast and notification RROs for dewd
- Add overlay for toast layout in dewd
- Utilize portrait notification RRO for dewd SysUI notification
  resources

Bug: 394245002
Bug: 395753784
Test: manual
Flag: NONE resource only
(cherry picked from https://googleplex-android-review.googlesource.com/q/commit:c4d327d61f521da7df0ee30d65168fce83bfb24c)
Merged-In: I762c3fab286cd6d6b83e7e288423b469e958efe1
Change-Id: I762c3fab286cd6d6b83e7e288423b469e958efe1

--- a/car_product/dewd/rro/CarNotificationDewdRRO/AndroidManifest.xml
+++ b/car_product/dewd/rro/CarNotificationDewdRRO/AndroidManifest.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8" ?>
 <!--
-  ~ Copyright (C) 2025 The Android Open Source Project
+  ~ Copyright (C) 2021 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -15,11 +16,10 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.android.systemui.rro.dewd">
-    <application android:hasCode="false" />
-    <overlay
-        android:targetPackage="com.android.systemui"
-        android:isStatic="true"
-        android:resourcesMap="@xml/overlays"
-    />
+          package="com.android.car.notification.dewd.rro">
+    <application android:hasCode="false"/>
+    <overlay android:priority="20"
+             android:targetPackage="com.android.systemui"
+             android:resourcesMap="@xml/overlays"
+             android:isStatic="true" />
 </manifest>
