Set priority on CarSystemUIDewdUIRRO
Test: manual
Bug: 395753784
Test: adb shell dumpsys activity com.google.android.car.kitchensink/.KitchenSinkActivity cmd post-toast "show"
Flag: com.android.systemui.car.scalable_ui
Change-Id: I9a4b186060b6f19a0dd94dc068fddb90ba85fcb5
(cherry picked from commit 47a1844303145761fe27eb6d1f7b6a59c847cbcd)

--- a/car_product/dewd/rro/CarSystemUIDewdUIRRO/AndroidManifest.xml
+++ b/car_product/dewd/rro/CarSystemUIDewdUIRRO/AndroidManifest.xml
@@ -21,5 +21,6 @@
         android:targetPackage="com.android.systemui"
         android:isStatic="true"
         android:resourcesMap="@xml/overlays"
+        android:priority="100"
     />
 </manifest>
